Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90396

QFontDialog highlights default value for the font style list

XMLWordPrintable

    • Linux/X11
    • 1405b53364dde83b7274202d75aa02561afd2f47 426b363761dbb4c95d263df2e4acdfab071c8018 (qt/qtbase/dev) f930f6a7974d31754031463a77cdd7e560bff5f5 (qt/qtbase/6.1) 72d75a98f14c1033ddc588b30ede0dae5d82d48c (qt/tqtc-qtbase/tqtc/lts-5.15)

      Opening the QFontDialog, the first item in the font style list is highlighted no matter which is actually used for the font.

      Steps to reproduce the issue:

      1. Run the attached example program.

      Expected Result:

      • The Regular font style should be highlighted as it represents the Normal weight set for the font.

      Actual Result:

      • The first item in the font style list is highlighted regardless of the what is set to the font.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hurlevent Oliver Eftevaag
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes